Fix path for example image

--- a/coordclimb.ipynb
+++ b/coordclimb.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"./bird.jpg\")"
+    "img = cv2.imread(\"./img/bird.jpg\")"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im_name = \"caps_small\"\n",
+    "im_name = \"bird\"\n",
     "cv2.imwrite(\"./climb/{}_r{}_c{}_i{:0>3}.png\".format(im_name, grid_rows, grid_cols, 0), ind.canvas)\n",
     "for i in range(120):\n",
     "    print(\"Iteration: {}\".format(i+1))\n",
